@@ -8,7 +8,8 @@ Version 1.4.0dev1
   * Recommonmark (MarkDown) support with colored code
   * change preview - set paned position fix
   * GTK Warning fix (debian bug #933622)
-  * SearchBar and searching text in SourceView
+  * SearchBar and searching text in editor
+  * searching text in preview
 
 Version 1.3.0 - 16.1.2018 7:00
 
